2016-01-22  Hendrik Tews  <Hendrik.Tews@FireEye.com>

	* add tests for cycle/swap/revgoals, Grab Existentials/Unshelve, giveup

2016-01-21  Hendrik Tews  <Hendrik.Tews@FireEye.com>

	* update evar parsing for 8.5

2016-01-18  Hendrik Tews  <Hendrik.Tews@FireEye.com>

	* disable implicit optional argument elimination warning 48

2016-01-18  Hendrik Tews  <Hendrik.Tews@FireEye.com>

	* fix deprecated or

2016-01-17  Hendrik Tews  <Hendrik.Tews@FireEye.com>

	* fix 4.02 compilation problem

2016-01-16  Hendrik Tews  <Hendrik.Tews@FireEye.com>

	* crash fix ??

2013-08-11  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* rename delete_non_sticky_node_window

2013-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* let the cancel button reset the configuration

2013-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* display a warning for config file version errors

2013-08-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* catch input log file opening errors

2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* close old PG log file, before changing it

2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update doc

2013-08-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* config window without apply

2013-08-05  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* use stock items for most buttons

2013-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* describe prooftree notification messages and other doc fixes

2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* show selected menu entry

2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update INSTALL, README; add compatibility file

2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* update man page

2013-08-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* quit prooftree when closing -config or -help-dialog windows
	* update help window text

2013-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>

	* add history list in external sequent windows
