@@ -4,7 +4,7 @@ Upstream-Contact: Hendrik Tews <prooftree@askra.de>
 Source: http://askra.de/software/prooftree
 
 Files: *
-Copyright: 2011 - 2013 Hendrik Tews
+Copyright: 2011 - 2016 Hendrik Tews
 License: GPL-3+
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
